<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.selfanalyst</groupId>
    <artifactId>self-analyst</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>SelfAnalyst</name>

    <modules>
        <module>self-analyst-aw</module>
        <module>self-analyst-app</module>
        <module>self-analyst-content</module>
        <module>self-analyst-audio</module>
        <module>self-analyst-wiki</module>
        <module>self-analyst-file</module>
        <module>self-analyst-integration-test</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

<javalin.version>6.4.0</javalin.version>
        <sqlite.version>3.47.1.0</sqlite.version>
        <jna.version>5.16.0</jna.version>
        <jackson.version>2.21.1</jackson.version>
        <agentscope.version>2.0.1</agentscope.version>
        <slf4j.version>2.0.17</slf4j.version>
        <logback.version>1.5.18</logback.version>
        <junit.version>5.11.4</junit.version>
        <tess4j.version>5.13.0</tess4j.version>
        <lucene.version>10.4.0</lucene.version>
        <pdfbox.version>3.0.5</pdfbox.version>
        <poi.version>5.4.1</poi.version>
        <commons-codec.version>1.18.0</commons-codec.version>
        <commons-io.version>2.18.0</commons-io.version>

        <compiler-plugin.version>3.13.0</compiler-plugin.version>
        <surefire-plugin.version>3.5.2</surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.selfanalyst</groupId>
                <artifactId>self-analyst-aw</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.selfanalyst</groupId>
                <artifactId>self-analyst-content</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.selfanalyst</groupId>
                <artifactId>self-analyst-audio</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.selfanalyst</groupId>
                <artifactId>self-analyst-wiki</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.selfanalyst</groupId>
                <artifactId>self-analyst-file</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.selfanalyst</groupId>
                <artifactId>self-analyst-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.agentscope</groupId>
                <artifactId>agentscope-core</artifactId>
                <version>${agentscope.version}</version>
            </dependency>
            <dependency>
                <groupId>io.agentscope</groupId>
                <artifactId>agentscope-harness</artifactId>
                <version>${agentscope.version}</version>
            </dependency>
            <dependency>
                <groupId>io.agentscope</groupId>
                <artifactId>agentscope-extensions-model-openai</artifactId>
                <version>${agentscope.version}</version>
            </dependency>
            <dependency>
                <groupId>io.javalin</groupId>
                <artifactId>javalin</artifactId>
                <version>${javalin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna-platform</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>net.sourceforge.tess4j</groupId>
                <artifactId>tess4j</artifactId>
                <version>${tess4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-core</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-analysis-common</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-queryparser</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <release>21</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
